samples/_failures_safe/1761194678_303817_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e5cdd2a5.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_e5cdd2a5.c:148:16: error: expected ‘,’ or ‘;’ at end of input
  148 |         struct MinHeapNode* node = extractMin
      |                ^~~~~~~~~~~
./samples/SAFE/__tmp_e5cdd2a5.c:148:16: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e5cdd2a5.c:148:16: error: expected declaration or statement at end of input
